fix white space

--- a/styles/input.css
+++ b/styles/input.css
@@ -22,6 +22,7 @@ div.terminaly_line .terminaly_field {
   padding: 2px 10px 12px;
   width: 100%;
   color: white;
+  white-space: pre;
 }
 
 div.terminaly_line .terminaly_keyword {
